@@ -2,6 +2,8 @@ Revision history for Text-VimColor
 
 {{$NEXT}}
 
+  - Add a basic test to ensure the script still operates
+
 0.21      2012-09-07T00:02:48Z
 
   - Add 'extra_vim_options' to be able to append options to the defaults
